--- a/.classpath
+++ b/.classpath
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/javamail-1.4.3/mail.jar"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/fitnesse.jar"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/FightingLayoutBugs-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-tools-standalone-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-demo-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-demo-standalone-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-hub-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-hub-standalone-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-remote-control-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-remote-control-standalone-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-grid-1.0.7/lib/selenium-grid-tools-1.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/selenium-remote-control-1.0.3/selenium-java-client-driver-1.0.1/selenium-java-client-driver.jar"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/HTMLParser-2.0-SNAPSHOT/lib/htmlparser.jar"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/jericho-html-3.1/classes"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/forc-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/mysql-connector-java-3.0.17-ga-bin.jar"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/jsch-0.1.42.jar"/>
-	<classpathentry kind="lib" path="C:/root/fitnesse/image-comparision-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
